# fering

./: .gitignore  CMakeLists.txt  HACKING  README  README.md  changelog.org  changlog.md  ops  root  run.lua  version
doc/: plan.org
include/: database.h  debug.h
src/: database.cpp  debug.cpp  main.cpp
